sql/test/unit/checks/end_processing_after_fail.exp
1
select 1;
select check(1 > 2);
^
|
 ----- ERROR
Error: line 2, character 0:
Constraint failed
